--- a/src/components/Search/Search.scss
+++ b/src/components/Search/Search.scss
@@ -1,4 +1,4 @@
-.buscaInput {
+.searchInput {
     align-items: center;
     background-color: white;  
     display: flex;
@@ -8,13 +8,12 @@
     gap: 5px; 
 }
   
-.input {
+.search-input {
     outline: none;
     width: 100%;
 }
 
-.icone {
+.search-icon {
     color: red;
     font-weight: bold;
-    //font-size: 20px;
 }
