Changed background-color and store styles

--- a/src/components/Search/Search.scss
+++ b/src/components/Search/Search.scss
@@ -1,6 +1,6 @@
 .searchInput {
     align-items: center;
-    background-color: white;  
+    background-color: #F7F7F7;  
     display: flex;
     width: 100%;
     padding: 14px 16px;
@@ -11,6 +11,7 @@
 .search-input {
     outline: none;
     width: 100%;
+    background-color: #F7F7F7;
 }
 
 .search-icon {
