--- a/src/index.scss
+++ b/src/index.scss
@@ -3,7 +3,7 @@
 }
 
 body {
-  background-color: #F5F5F5;
+  background-color: #fff;
   margin: 0;
   font-family: 'Montserrat', sans-serif;
   overflow-x: hidden;
