--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -2,7 +2,7 @@
     padding: 20px 200px 20px 200px;
 }
 
-.lojas {
+.stores {
     align-items: center;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
