--- a/src/components/Item/Item.scss
+++ b/src/components/Item/Item.scss
@@ -12,8 +12,11 @@
 }
 
 .item-image {
+    text-align: center;
+    height: 170px;
+    width: 170px;
     img {
-        width: 170px;
+        width: 100%;
         height: 170px;
     }
 }
