--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,11 +1,11 @@
 .header {
-    padding: 20px 200px 20px 200px;
+    padding: 20px 150px 20px 150px;
 }
 
 .stores {
     align-items: center;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: repeat(4, 1fr);
 }
 
 .items-card {
