--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -8,7 +8,6 @@ $mobile-sm: 600px;
   grid-template-areas: 'logo links busca icones';
   height: 80px;
   padding: 0 50px;
-
   width: 100vw;
   z-index: 1;
   box-shadow: inset 0 -1px 0 #dcdcdc;
@@ -49,6 +48,7 @@ $mobile-sm: 600px;
 .link {
   color: #717171;
   text-decoration: none;
+  font-size: 14px;
 }
 
 .busca {
